--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 /Proctoring-AI-master
 /caffe
 /tensorflow
+/opencv/data/train_dataset/hamza
+/opencv/data/hamza
 /.gitignore
-/data/dataset/1_hamza
-/data/hamza
